inject dll base

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,12 @@ cmake_minimum_required(VERSION 3.17)
 project(InjectDll)
 
 set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_C_FLAGS -m32)
-set(CMAKE_CXX_FLAGS -m32)
-
-include_directories(tools)
-
+#set(CMAKE_C_FLAGS -m32)
+#set(CMAKE_CXX_FLAGS -m32)
+include_directories(tools include)
 add_executable(InjectDll
         src/main.cpp
         tools/tools.cpp
-        tools/tools.h src/inject_dll/inject_dll.cpp src/inject_dll/inject_dll.h)
+        include/tools.h src/inject_dll/inject_dll.cpp src/inject_dll/inject_dll.h include/include.h include/wow64ext.h)
 
 target_link_libraries(InjectDll psapi Version dxgi)
